Agregue la carpeta del proyecto de google clone

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><button onclick="cargarProyecto('ejercicios/Palindromo/index.html')">Palindrome</button></li>
         <li><button onclick="cargarProyecto('ejercicios/ppt/index.html')">Piedra, papel o tijera</button></li>
         <li><button onclick="cargarProyecto('ejercicios/ppt2/index.html')">Piedra, papel o tijera 2</button></li>
+        <li><button onclick="cargarProyecto('ejercicios/GOOGLE/index.html')">Google Clone</button></li>
       </ul>
     </aside>
 
