--- a/ejercicios/ppt2/index.html
+++ b/ejercicios/ppt2/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="fondo-juego">
+<body>
     <!-- <img src="img/FCA.png" alt="">
     <img src="img/titulo.png" alt="">
     <img src="img/score.png" alt="">
@@ -15,10 +15,8 @@
     <header>
         <div class="div_header">
             <div class="imagenes">
-                <img src="img/FCA.png" class="img_img1" alt="Imagen 1" />
-            </div>
-            <div class="imagenes">
                 <img src="img/titulo.png" class="img_img2" alt="Imagen 2" />
+                <img src="img/FCA.png" class="img_img1" alt="Imagen 1" />
             </div>
             
             <div class="contenedor-juego">
@@ -26,12 +24,12 @@
                 <div class="tabla-score">
                     <table>
                         <tr>
-                        <th>Jugador 1</th>
-                        <th>Jugador 2</th>
+                            <th>Jugador 1</th>
+                            <th>Jugador 2</th>
                         </tr>
                         <tr>
-                        <td id="score1">0</td>
-                        <td id="score2">0</td>
+                            <td id="score1">0</td>
+                            <td id="score2">0</td>
                         </tr>
                     </table>
                 </div>
