--- a/ejercicios/ppt2/index.html
+++ b/ejercicios/ppt2/index.html
@@ -37,7 +37,53 @@
         </div>
     </header>
 
+<section>
+    <table>
+        <tr>
+            <th>
+                1
+            </th>
+            <th>
+                2
+            </th>
+            <th>
+                3
+            </th>
+            <th>
+                4
+            </th>
+        </tr>
+        <tr>
+            <td>
+                5
+            </td>
+            <td>
+                6
+            </td>
+            <td>
+                7
+            </td>
+            <td>
+                8
+            </td>
+        </tr>
+        <tr>
+            <td>
+                9
+            </td>
+            <td>
+                10
+            </td>
+            <td>    
+                11
+            </td>
+            <td>
+                12
+            </td>
 
+        </tr>
+    </table>
+</section>
 
 <footer>
     <div>
