--- a/ejercicios/ppt2/index.html
+++ b/ejercicios/ppt2/index.html
@@ -21,8 +21,8 @@
                 <div class="tabla-score">
                     <table>
                         <tr>
-                            <th>Jugador 1</th>
-                            <th>Jugador 2</th>
+                            <th class="thjig1">Jugador 1</th>
+                            <th class="thjig2">Jugador 2</th>
                         </tr>
                         <tr>
                             <td id="score1">0</td>
